# y2b

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-amd64  README.md  _exception.py  bili_cookie.json  cli_to_api.py  download.py  index.py  main.py  preview.py  pyproject.toml  requirements.txt  sources.list  test_bili.py  test_login.py  test_srt.py  test_up.py  upgrade_bilibili_api.py  upgrade_yt_dlp.py  upload.py  utils.py  wsl2-debian-log.txt
config/: init_cfg.py
controllers/: download.py  download2.py  index_route.py  list.py  login.py  preview_route.py  upload.py  upload_route.py
db/: database.db  init_db.py  schema.sql
forms/: download.py
src/: index.py
src/controllers/: delete.py  download.py  download2.py  list.py  login.py  pending.py  preview.py  upload.py  upload2.py
src/forms/: download.py  upload.py
src/templates/: _base.html  download.html  download2.html  list.html  login.html  preview.html  upload.html
src/utils/: _exception.py  account.py  constants.py  db.py  dict.py  progress.py  retry_decorator.py  string.py  stringUtil.py  subtitle.py  sys.py  translate_srt.py
static/: countdown.js
templates/: _base.html  download.html  list.html  login.html  preview.html  upload.html
tests/: run_translate_fullmode.py  test_add_subtitle_prefix.py  test_download_fallback.py  test_merge_srt.py  test_srt.py  test_subtitle_download.py  test_translate_fullmode.py  test_up.py
utils/: account.py  constants.py  db.py  dict.py  string.py  sys.py
