[project]
name = "y2b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bilibili-api-python",
    "flask-wtf==1.2.1",
    "requests==2.32.2",
    "wtforms==3.1.2",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp==2025.7.21",
    "httpx==0.28.1",
    "sacremoses==0.1.1",
    "srt==3.5.3",
    "transformers==4.55.0",
    "sentencepiece==0.2.0",
    "torch==2.8.0"
]

[tool.uv.sources]
bilibili-api-python = { git = "https://github.com/Nemo2011/bilibili-api.git" }
