[project]
name = "y2b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bilibili-api-python==17.3.0",
    "flask-wtf==1.2.1",
    "requests==2.32.2",
    "wtforms==3.1.2",
    "youtube-transcript-api>=1.2.2",
    "yt-dlp==2025.09.05",
    "httpx==0.28.1",
    "sacremoses==0.1.1",
    "srt==3.5.3",
    "transformers==4.55.0",
    "sentencepiece==0.2.0",
    "torch==2.8.0"
]
